--- a/18477142_MICB425_portfolio.Rmd
+++ b/18477142_MICB425_portfolio.Rmd
@@ -107,65 +107,55 @@ To add files, use the add, commit, and push commands as follows:
 
 ```
 
-### Plotting data in R
+### Assignment 4 - Plotting data in R
 
-####Exercise 1
+####Prep work
 
-*SiO2 vs Depth, with purple triangles*  
-ggplot(metadata, aes(x=SiO2_uM, y=Depth_m)) +  
-  geom_point(color="purple", shape=17)
+```{r}
+#Load libraries
+library(tidyverse)
+library(phyloseq)
 
-![](18477142_ggplot_Exercise1.jpeg)
-
-####Exercise 2
-
- *Temperature_F vs Depth_m*  
-metadata %>%  
-  mutate(Temperature_F = Temperature_C*9/5+32) %>%  
-    ggplot(aes(x=Temperature_F, y=Depth_m)) +  
-      geom_point()  
-
-![](18477142_ggplot_Exercise2.jpeg)
-
-
-####Exercise 3
-
-
-Unable to load phyloseq data? Code used is shown with errors.
-
-source("https://bioconductor.org/biocLite.R")  
-biocLite("phyloseq", type = "source")
-
-library(phyloseq)  *At this point, phyloseq has been installed and can be seen in the packages tab*
-
+#Load Data
+metadata = read.table(file="Saanich.metadata.txt", header=TRUE, row.names=1, sep="\t")
 load("phyloseq_object.RData")
 
-*Get the following error trying to carry this out.*
-  
-Error in readChar(con, 5L, useBytes = TRUE) : cannot open the connection
-In addition: Warning message:  
-In readChar(con, 5L, useBytes = TRUE) :
-cannot open compressed file 'phyloseq_object.RData', probable reason 'No such file or directory'    
-*Likely cause is improper installation of phyloseq, but I have repeated it with a fresh workspace to no avail*  
+#Convert Phyloseq data to percent
+physeq_percent = transform_sample_counts(physeq, function(x) 100 * x/sum(x))
+```
 
-Tried to figure out the code needed to generate the figure anyways, but could not run it to see if it works.
+####Exercise 1
+```{r}
+#SiO2 vs Depth, with purple triangles
+ggplot(metadata, aes(x=SiO2_uM, y=Depth_m)) +
+  geom_point(color="purple", shape=17)
+```
+####Exercise 2
+```{r}
+#Temperature_F vs Depth_m
+metadata %>%
+  mutate(Temperature_F = Temperature_C*9/5+32) %>% #Convert temperature to F and pipe it to ggplot
+    ggplot(aes(x=Temperature_F, y=Depth_m)) +
+      geom_point()
+```
 
-plot_bar(physeq_percent, fill="Class") +  
-  geom_bar(aes(fill=Class), stat="identity") +  
-  labs(x="Sample Depth", y="Percent relative abundance") +  
-  title="Class from 10 to 200 m in Saanich Inlet"  
+####Exercise 3
+```{r}
+plot_bar(physeq_percent, fill="Class") + 
+  geom_bar(aes(fill=Class), stat="identity") +
+  labs(x="Sample Depth", y="Percent relative abundance")
+```
 
 ####Exercise 4
-
-metadata %>%   
-  gather(Nutrient, uM, NH4_uM, NO2_uM, NO3_uM, O2_uM, PO4_uM, SiO2_uM) %>%   
-  ggplot(aes(x=Depth_m, y=uM))+  
-  geom_point() +  
-  geom_line() +  
-  facet_wrap(~Nutrient, scales="free_y") +  
-  theme(legend.position="none")  
-
-![](18477142_ggplot_Exercise4.jpeg)
+```{r}
+metadata %>% 
+  gather(Nutrient, uM, NH4_uM, NO2_uM, NO3_uM, O2_uM, PO4_uM, SiO2_uM) %>% #Put all the desired data into a single column
+  ggplot(aes(x=Depth_m, y=uM))+
+  geom_point() +
+  geom_line() + #Do both point and lines for the graph
+  facet_wrap(~Nutrient, scales="free_y") +
+  theme(legend.position="none")
+```
 
 ## Origins and Earth Systems
 ### Evidence worksheet 01 
@@ -392,7 +382,54 @@ While horizontal gene flow has distributed many families of genes, there still e
 
 Due to the glacial periods of earth's history, life was restricted to tiny pockets of microbiall-habital patches, where the metabolic pathways remained protected. Since the metabolic mechanisms have been horizontally transfered to every species on earth, individual taxonomic units can go extinct while the core metabolic machines carry on unperturbed.
   
+### Module 1 Writing Assignment
+
+  Microbial life has played a fundamental role in shaping Earth’s biosphere; however, I believe that humanity is more than capable of surviving without the global catalysis and environmental transformation that microbes provide. I will not argue that humanity would be able to adapt and survive following a fantastical, cataclysmic event where only microbial life was extinguished. Rather, I will argue that humanity has the capacity to understand all the biogeochemical processes provided by microbial life with the help of continually-improving computational models. Humanity also has the capacity to understand the influence our own technology has on the global environment, and we can consciously adapt our global actions as necessary to restore order to the global equilibrium. Finally, we can develop new technology to replicate and optimize every biogeochemical process on a global and potentially interplanetary scale. Through these processes, humanity will be capable of controlling and guiding the global environment to ensure the continued survival of our species without relying on evolutionarily-limited, globally-unconscious microbial life.  
+    
+  Before we can control the Earth, we must understand it. By learning about the history of Earth, we have been able to discover how biogeochemical cycles have driven global changes in Earth’s environment, which could help us model how it might occur again in the future (Nisbet and Sleep, 2003). It is thought that the changes in Earth’s biosphere that are currently underway are being driven by human activity (Waters et al. 2016). This new era has been named the Anthropocene, and if we are to understand the changes underway and attempt to mitigate the damage to the environment and human society we will need to use computational models to simulate global geochemical cycles. Models of this scale are not possible with our current technology, but there has been a continual improvement in the computational power and accuracy of our models for decades. For example, Falkowski et al. (2000) noted that, “…we have considerable information about specific aspects of the carbon cycle, but many of the couplings and feedbacks are poorly understood” (p. 294) because we needed a systems/integrative approach, yet not even 20 years later Wang et al. (2017) modeled global soil carbon and soil microbial carbon by combining multiple models into one integrative model.  
+    
+  Another example of the improvement in our computational models is from meteorological simulations that model atmospheric conditions to predict the weather. Forty years ago, our 3- and 7-day forecast skill were at 80% and 40%, respectively, and as of 2013 those values are at 95% and 70%, respectively (Bauer et al. 2015). These improvements came from exponential increases in computational power, but there were other major advancements such as the global satellite data gained in the early 2000s (Bauer et al. 2015). Today, we are at the dawn of using machine learning and artificial intelligence in our predictive models, which recursively improve upon themselves to achieve an accuracy greater than any conventional model can (Jones 2017). The atmosphere is an important part of the global biosphere, and the advances in all of our computational modelling technologies will eventually lead to an all-encompassing, global model of the Earth’s biogeochemical cycles.  
+    
+  Humanity’s technological advancement has influenced the global environment at an unprecedented scale, and we need to be able to recognize the influence our own technology has and adjust our actions as a global community to restore order to the Earth’s equilibrium. A prime example of humanity recognizing the influence of our technology on the environment is the crisis of the ozone hole and the signing of the Montreal Protocol. In 1973, it was discovered by the future Nobel laureates Paul Crutzen, Mario Molina, and F. Sherwood Rowland that chlorofluorocarbons (CFCs), a class of compounds commonly used as refrigerants and flame-retardants, were responsible for the depletion of the ozone layer (NobelPrize.org, 1995). It took fifteen years, but in 1987, an international treaty known as the Montreal Protocol was agreed upon, which resulted in the phasing out of all CFCs and other related substances in hopes of protecting the ozone layer (Ozone Secretariat, 2017). Thirty years later we can now say that the Montreal Protocol was a success, and that there has been a decline in Antarctic ozone depletion as well as lower stratospheric chlorine, a byproduct of CFCs (Strahan et al., 2018).  
+    
+  Humanity was able to recognize the influence our technology has on the ozone layer and come together to solve the problem, but we are currently going through another global environmental change due to our technology that requires us to come together as a global community once again. At the World Climate Conference in 1979 it was noted that increased CO2 in the atmosphere can contribute to a gradual warming of the planet (World Meteorological Organization 1979). There has been a lot of research on the topic climate change since then, and it can be said without a doubt that there has been a rapid increase in atmospheric CO2 due to human activities (Falkowski et al., 2000). There has been no effective international treaty to reduce the human impact on climate change yet, but the Paris Climate Accord is set to come in to effect in 2020. The Paris Climate Accord is an international treaty that contains plans for greenhouse gas emissions mitigation, adaption, and financing so that humanity can keep the global temperature rise to well below than 2°C (UN Treaty Collection, 2015). It is unknown at this time if these measures will succeed in mitigating climate change, but measures like these are a sign that humanity is capable of recognizing our own impact on the global environment and can consciously change our global behavior.  
+
+  While the Paris Climate Accord merely aims to mitigate greenhouse gas emissions, new technology has the potential for us to not only mitigate emissions but to actually reduce the amount of CO2 present in the atmosphere. There are multiple methods of carbon fixation currently under research, and they primarily fall under two related categories: synthetic metabolic pathways and artificial photosynthesis. Schwander et al. designed a continuous synthetic carbon fixation pathway involving “…17 enzymes from nine different organisms and all three domains of life…” (2016, p. 902) that is five times more efficient than the most common natural carbon fixation pathway.  A few of the enzymes used were rationally engineered to catalyze the desired reactions, and the pathway clearly demonstrates the ingenuity of humanity to design a “…synthetic alternative that [does] not require the serendipity of evolution to bring together all components in space and time” (Schwander et al., 2016, p. 902). Synthetic pathways like Schwander et al.’s can be used in a variety of ways, such as in engineered photosynthetic organisms to improve CO2 fixation or in completely artificial photosynthetic processes like artificial leaves that rely on photovoltaics and other catalytic technologies (Berardi et al., 2014). Technological carbon fixation is not feasible at a global scale yet, but Rheticus is a new joint research project backed by major electrical and chemical companies to demonstrate the feasibility of artificial photosynthesis by using electricity from renewable sources and genetically engineered bacteria to convert CO2 into specialty chemicals at a pilot-plant scale (Siemens and Evonik, 2018). Ventures such as this may eventually bring industrial carbon fixation into the same realm as industrial nitrogen fixation by the Haber-Bosch process, which is responsible for half of the Earth’s nitrogen fixation (Canfield et al., 2010).  
+
+  The Earth will continue revolve around the sun no matter what humanity does to it, but it is up to humanity to understand Earth’s biogeochemical cycles and the influence our rapidly-advancing technology has on them if we want to take the captain’s chair on “Spaceship Earth” (Archenbach, 2012). Biogeochemical cycles have been a popular field of research for many years, but it’s only been since the dawn of computers that we have been able to create complex computation models. With modern computational tools, we can integrate multiple different models into a single, unified model and use machine learning technology to analyze and make predictions from data sets larger than any human could comprehend. We can also use models to make predictions about the way our own technology and its by-products will affect the global environment. Designing and implementing international treaties such as the Montreal Protocol and the Paris Climate Accord is how humanity demonstrates that it is the true captain of “Spaceship Earth”. Microbes cannot come together as a global community to consciously guide Earth’s biosphere, but humanity has demonstrated it is more than capable of doing so. And as we develop new artificial biogeochemical cycle technologies like synthetic metabolic pathways, artificial photosynthesis, and other unknown advancements, we will continually enhance our capability to guide Earth’s biosphere. In the far future, humanity may have such a firm grasp on synthetic biogeochemical cycles that we not only control Earth’s biosphere but are also capable of terraforming other planets such as Mars or Venus, creating a robust, interplanetary biosphere.
+
   
 ### Module 01 references
+
+Archenbach, J. (2012, Jan. 2). Spaceship Earth: A new view of environmentalism. The Washington Post. 
+
+Bauer, P., Thorpe, A., & Brunet, G. (2015). The quiet revolution of numerical weather prediction. Nature, 525(7567), 47. 10.1038/nature14956
+
+Berardi, S., Drouet, S., Francàs, L., Gimbert-Suriñach, C., Guttentag, M., Richmond, C., . . . Llobet, A. (2014). Molecular artificial photosynthesis. Chemical Society Reviews, 43(22), 751-7519. 10.1039/c3cs60405e
+
+Canfield, D. E., Glazer, A. N., & Falkowski, P. G. (2010). The evolution and future of earth's nitrogen cycle. Science, 330(6001), 192-196. 10.1126/science.1186120
+
+World Meteorological Organization. (1979). Declaration of the World Climate Conference. World Meteorological Organization. 
+
+Falkowski, P., Scholes, R. J., Boyle, E., Canadell, J., Canfield, D., Elser, J., . . . Steffen, W. (2000). The global carbon cycle: A test of our knowledge of earth as a system. Science, 290(5490), 291-296. 10.1126/science.290.5490.291
+
+Jones, N. (2017). Machine learning tapped to improve climate forecasts. Nature, 548(7668), 379.
+
+Nisbet, E. G., & Sleep, N. H. (2001). The habitat and nature of early life. Nature, 409(6823), 1083-1091. 10.1038/35059210
+
+Nobelprize.org. (1995, Oct. 11), The Nobel Prize in Chemistry 1995. Retrieved from www.nobelprize.org
+
+Schwander, T., Schada von Borzyskowski, L., Burgener, S., Cortina, N. S., & Erb, T. J. (2016). A synthetic pathway for the fixation of carbon dioxide in vitro. Science, 354(6314), 900-904. 10.1126/science.aah5237
+
+Siemens and Evonik. (2018, Jan. 18). Evonik and Siemens to generate high-value specialty chemicals from carbon dioxide and eco-electricity. Retrieved from https://www.siemens.com
+
+Ozone Secretariat. (2017). The Montreal Protocol on Substances that Deplete the Ozone Layer. Retrieved from: http://ozone.unep.org
+
+UN Treaty Collection. (2015, Dec. 12). Paris Agreement. Retrieved from: https://treaties.un.org
+
+Wang, K., Peng, C., Zhu, Q., Zhou, X., Wang, M., Zhang, K., & Wang, G. (2017). Modeling global soil carbon and soil microbial carbon by integrating microbial processes into the ecosystem process model TRIPLEX‐GHG. Journal of Advances in Modeling Earth Systems, 9(6), 2368-2384. 10.1002/2017MS000920
+
+Waters, C. N., Zalasiewicz, J., Summerhayes, C., Barnosky, A. D., Poirier, C., Gałuszka, A., . . . Wolfe, A. P. (2016). The anthropocene is functionally and stratigraphically distinct from the holocene. Science (New York, N.Y.), 351(6269), aad2622-aad2622. 10.1126/science.aad2622
+
 
 Whitman WB, Coleman DC, and Wiebe WJ. 1998. Prokaryotes: The unseen majority. Proc Natl Acad Sci USA. 95(12):6578–6583.  [PMC33863](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC33863/)
